--- a/testHTML/style/style.css
+++ b/testHTML/style/style.css
@@ -6,12 +6,66 @@
     background-size: cover;
 } */
 
-#indexBody {
+/* #indexBody {
     background: url("../../images/camera.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+} */
+
+.parallax {
+    /* The image used */
+    background-image: url("../../images/camera.jpg");
+  
+    /* Set a specific height */
+    min-height: 500px; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#paraOne {
+        /* The image used */
+    background-image: url("../../images/baby.jpg");
+
+    /* Set a specific height */
+    min-height: 500px; 
+    
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#paraTwo {
+    background-image: url("../../images/pug.jpg");
+
+    /* Set a specific height */
+    min-height: 500px; 
+    
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#indexBody {
+    background: linear-gradient(
+        to left, rgb(138, 187, 219), rgb(226, 241, 220) 25%, rgb(226, 241, 220)  75%, rgb(138, 187, 219) 100%
+        );
+    box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;
+}
+
+#instructDiv{
+    padding-top: 35pt;
+    padding-bottom: 35pt;
+    filter: drop-shadow();
 }
 
 #welcome {
@@ -26,7 +80,9 @@ img{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    
 }
+
 
 #landingImg {
     margin-right: 35px;
@@ -49,7 +105,10 @@ input {
         -12px 0 15px -4px rgba(31, 73, 125, 0.8);
     /* opacity: 0.5; */
     /* filter: alpha(opacity=50); */
+    margin-bottom: 50px;
+    background: white;
 }
+
 
 #landingTitle {
     border-bottom: solid 1pt gray;
@@ -67,5 +126,12 @@ input {
 .fas {
     cursor: pointer;
 }
+
+#iconRow {
+    margin-top: 25pt;
+    margin-bottom: 25pt;
+}
+
+
 
 
