--- a/react-practice/client/src/pages/style.css
+++ b/react-practice/client/src/pages/style.css
@@ -44,6 +44,7 @@
         to left, rgb(138, 187, 219), rgb(226, 241, 220) 25%, rgb(226, 241, 220)  75%, rgb(138, 187, 219) 100%
         );
     box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;
+    padding-bottom: 25px;
 }
 
 #instructDiv{
