--- a/react-practice/client/src/pages/style.css
+++ b/react-practice/client/src/pages/style.css
@@ -45,12 +45,12 @@
         );
     box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;
     padding-bottom: 25px;
+    box-shadow: 
+        12px 0 15px -4px rgba(31, 73, 125, 0.8), 
+        -12px 0 15px -4px rgba(31, 73, 125, 0.8);
     
 }
 
-.container{
-    
-}
 
 #instructDiv{
     padding-top: 35pt;
