--- a/react-practice/client/src/components/Welcome/style.css
+++ b/react-practice/client/src/components/Welcome/style.css
@@ -6,5 +6,6 @@
     box-shadow:     
         12px 0 15px -4px rgba(31, 73, 125, 0.8), 
         -12px 0 15px -4px rgba(31, 73, 125, 0.8);
+    opacity: 0.7;
     
 }
