--- a/react-practice/client/src/pages/style.css
+++ b/react-practice/client/src/pages/style.css
@@ -1,3 +1,15 @@
+@font-face{
+    font-family: "Mochi Font";
+    src: url(../images/xenodemon.ttf) format("truetype");
+}
+
+@font-face{
+    font-family: "Majoram Sans Italic";
+    src: url(../images/MajoramSansItalic.otf) format("truetype");
+}
+
+
+
 .parallax {
     /* The image used */
     background-image: url("../images/camera.jpg");
@@ -44,13 +56,9 @@
         to left, rgb(138, 187, 219), rgb(226, 241, 220) 25%, rgb(226, 241, 220)  75%, rgb(138, 187, 219) 100%
         );
     box-shadow: 25px 25px 50px 0 white inset, -25px -25px 50px 0 white inset;
-    padding-bottom: 25px;
-    
+    padding-bottom: 25px;    
 }
 
-.container{
-    
-}
 
 #instructDiv{
     padding-top: 35pt;
