--- a/react-practice/client/src/components/InfoRow/style.css
+++ b/react-practice/client/src/components/InfoRow/style.css
@@ -16,12 +16,15 @@
 
 #iconFire{
     color: red;
+    opacity: 0.7;
 }
 
 #iconWater{
     color: blue;
+    opacity: 0.7;
 }
 
 #iconStorm{
     color: yellow;
+    opacity: 0.7;
 }
