--- a/react-practice/client/src/components/NewUser/style.css
+++ b/react-practice/client/src/components/NewUser/style.css
@@ -3,4 +3,5 @@
         12px 0 15px -4px rgba(31, 73, 125, 0.8), 
         -12px 0 15px -4px rgba(31, 73, 125, 0.8);
     margin-bottom: 35px;
+    opacity: 0.9;
 }
