--- a/react-practice/client/src/components/Welcome/style.css
+++ b/react-practice/client/src/components/Welcome/style.css
@@ -7,5 +7,11 @@
         12px 0 15px -4px rgba(31, 73, 125, 0.8), 
         -12px 0 15px -4px rgba(31, 73, 125, 0.8);
     opacity: 0.7;
-    font-family: "Majoram Sans Italic";
+    font-family: "Leckerli One";    
 }
+
+/* #welcome{
+    mix-blend-mode: lighten;
+} */
+
+
