--- a/react-practice/client/src/components/Welcome/style.css
+++ b/react-practice/client/src/components/Welcome/style.css
@@ -7,11 +7,13 @@
         12px 0 15px -4px rgba(31, 73, 125, 0.8), 
         -12px 0 15px -4px rgba(31, 73, 125, 0.8);
     opacity: 0.7;
-    font-family: "Leckerli One";    
+    
 }
 
-/* #welcome{
-    mix-blend-mode: lighten;
-} */
+#welcome{
+    font-family: "Annabel";    
+    font-size: 35pt;
+    margin-bottom: -25pt;
+}
 
 
